<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res-auto">

    <SwitchPreference
        android:key="game_overlay_enable"
        android:title="@string/enable_gamespace_overlay"
        android:summary="@string/game_overlay_summary"
        android:defaultValue="false" />

    <PreferenceCategory
        android:title="@string/overlay_features"
        android:dependency="game_overlay_enable">

        <SwitchPreference
            android:key="game_overlay_fps_enable"
            android:title="@string/enable_fps_info"
            android:summary="@string/summary_fps_info"
            android:defaultValue="false" />

        <SwitchPreference
            android:key="game_overlay_temp_enable"
            android:title="@string/enable_show_device_temp"
            android:summary="@string/summary_show_device_temp"
            android:defaultValue="false" />

        <SwitchPreference
            android:key="game_overlay_cpu_usage_enable"
            android:title="@string/enable_show_cpu_usage"
            android:summary="@string/summary_show_cpu_usage"
            android:defaultValue="false" />

        <SwitchPreference
            android:key="game_overlay_cpu_clock_enable"
            android:title="@string/enable_show_cpu_clock_speed"
            android:summary="@string/summary_show_cpu_clock_speed"
            android:defaultValue="false" />

        <SwitchPreference
            android:key="game_overlay_cpu_temp_enable"
            android:title="@string/enable_show_cpu_temp"
            android:summary="@string/summary_show_cpu_temp"
            android:defaultValue="false" />

        <SwitchPreference
            android:key="game_overlay_ram_enable"
            android:title="@string/enable_show_ram_usage"
            android:summary="@string/summary_show_ram_useage"
            android:defaultValue="false" />

        <SwitchPreference
            android:key="game_overlay_gpu_usage_enable"
            android:title="@string/enable_show_gpu_usage"
            android:summary="@string/summary_show_gpu_usage"
            android:defaultValue="false" />

        <SwitchPreference
            android:key="game_overlay_gpu_clock_enable"
            android:title="@string/enable_show_gpu_clock_speed"
            android:summary="@string/summary_show_gpu_clock_speed"
            android:defaultValue="false" />

        <SwitchPreference
            android:key="game_overlay_gpu_temp_enable"
            android:title="@string/enable_show_gpu_temp"
            android:summary="@string/summary_show_gpu_temp"
            android:defaultValue="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/custom_common"
        android:dependency="game_overlay_enable">

        <SeekBarPreference
            android:key="game_overlay_text_size"
            android:title="@string/text_size"
            android:summary="@string/summary_text_size"
            android:defaultValue="16"
            android:max="32"
            android:min="12" />

        <SeekBarPreference
            android:key="game_overlay_background_alpha"
            android:title="@string/background_transparency"
            android:summary="@string/summary_backgroud_transparency"
            android:defaultValue="128"
            android:max="255"
            android:min="0" />

        <SeekBarPreference
            android:key="game_overlay_corner_radius"
            android:title="@string/overlay_corner_radius"
            android:summary="@string/summary_overlay_corner_radius"
            android:defaultValue="16"
            android:max="100"
            android:min="0" />

        <SeekBarPreference
            android:key="game_overlay_padding"
            android:title="@string/overlay_padding"
            android:summary="@string/summary_overlay_padding"
            android:defaultValue="12"
            android:max="64"
            android:min="0" />

        <SeekBarPreference
            android:key="game_overlay_item_spacing"
            android:title="@string/overlay_item_spacing"
            android:summary="@string/summary_overlay_item_spacing"
            android:defaultValue="8"
            android:max="50"
            android:min="0" />

        <ListPreference
            android:key="game_overlay_update_interval"
            android:title="@string/overlay_update_interval"
            android:summary="@string/summary_overlay_update_interval"
            android:defaultValue="1000"
            android:entries="@array/fps_overlay_update_interval_entries"
            android:entryValues="@array/fps_overlay_update_interval_values" />

        <ListPreference
            android:key="game_overlay_title_color"
            android:title="@string/overlay_title_color"
            android:summary="@string/summary_overlay_title_color"
            android:defaultValue="#FFFFFF"
            android:entries="@array/fps_overlay_color_entries"
            android:entryValues="@array/fps_overlay_color_values" />

        <ListPreference
            android:key="game_overlay_value_color"
            android:title="@string/overlay_value_color"
            android:summary="@string/summary_overlay_value_color"
            android:defaultValue="#4CAF50"
            android:entries="@array/fps_overlay_color_entries"
            android:entryValues="@array/fps_overlay_color_values" />

        <ListPreference
            android:key="game_overlay_position"
            android:title="@string/overlay_position"
            android:summary="@string/summary_overlay_position"
            android:defaultValue="top_left"
            android:entries="@array/fps_overlay_position_entries"
            android:entryValues="@array/fps_overlay_position_values" />

        <ListPreference
            android:key="game_overlay_format"
            android:title="@string/overlay_format"
            android:summary="@string/summary_overlay_format"
            android:defaultValue="full"
            android:entries="@array/game_overlay_format_entries"
            android:entryValues="@array/game_overlay_format_values" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/overlay_split_config"
        android:dependency="game_overlay_enable">

        <ListPreference
            android:key="game_overlay_split_mode"
            android:title="@string/overlay_split_mode"
            android:summary="@string/summary_overlay_split_mode"
            android:defaultValue="stacked"
            android:entries="@array/game_overlay_split_mode_entries"
            android:entryValues="@array/game_overlay_split_mode_values" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/overlay_gesture_control"
        android:dependency="game_overlay_enable">

        <SwitchPreference
            android:key="game_overlay_single_tap_toggle"
            android:title="@string/overlay_single_tap_toggle"
            android:summary="@string/summary_overlay_single_tap_toggle"
            android:defaultValue="false" />

        <SwitchPreference
            android:key="game_overlay_doubletap_capture"
            android:title="@string/overlay_doubletap_capture"
            android:summary="@string/summary_overlay_doubletap_capture"
            android:defaultValue="false" />

        <SwitchPreference
            android:key="game_overlay_longpress_enable"
            android:title="@string/overlay_longpress_enable"
            android:summary="@string/summary_overlay_longpress_enable"
            android:defaultValue="false" />

        <ListPreference
            android:key="game_overlay_longpress_timeout"
            android:title="@string/overlay_longpress_timeout"
            android:summary="@string/summary_overlay_longpress_timeout"
            android:defaultValue="1000"
            android:entries="@array/game_overlay_longpress_entries"
            android:entryValues="@array/game_overlay_longpress_values"
            android:dependency="game_overlay_longpress_enable" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/overlay_log"
        android:dependency="game_overlay_enable">

        <Preference
            android:key="game_overlay_capture_start"
            android:title="@string/overlay_capture_start"
            android:summary="@string/summary_overlay_capture_start" />

        <Preference
            android:key="game_overlay_capture_stop"
            android:title="@string/overlay_capture_stop"
            android:summary="@string/summary_overlay_capture_stop" />

        <Preference
            android:key="game_overlay_capture_export"
            android:title="@string/overlay_capture_export"
            android:summary="@string/summary_overlay_capture_export" />
    </PreferenceCategory>

</PreferenceScreen>
